# hive

./: .gitignore  .golangci.yml  .goreleaser.yml  AGENTS.md  Dockerfile  Dockerfile.test  README.md  Taskfile.yml  config.dev.yaml  config.invalid.yaml  connectors_wire.go  connectors_wire_test.go  deferred_writer.go  go.mod  go.sum  main.go  main_test.go  mise.toml  renovate.json  sources_wire.go  sources_wire_test.go  sqlc.yaml  zensical.toml
.beads/: issues.jsonl
.claude/: settings.local.json
.claude-plugin/: marketplace.json
desktop/: .gitignore  AGENTS.md  README.md  Taskfile.yml  actions_smoke.go  actions_smoke_test.go  actionsservice.go  actionsservice_test.go  activityservice.go  buildinfo.go  buildinfo_test.go  feedservice.go  feedservice_test.go  flowsrefs.go  flowsrefs_test.go  flowsservice.go  flowsservice_test.go  focusstate.go  focusstate_test.go  jobservice.go  jobservice_test.go  main.go  mockseed.go  mockseed_test.go  notificationservice.go  notificationservice_test.go  pipeline_smoke.go  pipelineservice.go  pipelineservice_enum.go  pipelineservice_test.go  profiletray.go  profiletray_test.go  settingsservice.go  settingsservice_test.go  systemservice.go  systemservice_test.go  updater_provider.go  updater_provider_test.go  updaterservice.go  updaterservice_test.go  (+1 more)
dev/: config.dev.yaml  docker-entrypoint.sh
docs/: cli-reference.md  faq.md  index.md  source-pipeline.md  (+1 more)
ml/: README.md  pyproject.toml
ml/hive_corpus/: __init__.py  annotate.py  cli.py  events.py  reader.py  schema.py
ml/tests/: test_annotate.py  test_events.py  test_reader.py
(+1457 files in other folders)
