[project]
name = "hive-corpus"
version = "0.1.0"
description = "Offline corpus + model pipeline for Hive terminal-status inference"
readme = "README.md"
requires-python = ">=3.11"
# Core reader/validator/summary/correlate are stdlib-only.
# ML/LLM extras are opt-in to keep the base install dependency-free.
dependencies = []

[project.optional-dependencies]
train = [
    "numpy>=2.0",
    "scikit-learn>=1.5",
]
llm = [
    "httpx>=0.27",
]

[project.scripts]
hive-corpus = "hive_corpus.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hive_corpus"]
